--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -438,10 +438,10 @@ slurm:
         # - 'f32-rds-timing-gpu' 
 
         # Approximate 
-        - 'srp-timing-cpu'
-        - 'rds-timing-cpu' 
+        # - 'srp-timing-cpu'
+        # - 'rds-timing-cpu' 
         - 'exact-timing-cpu' 
-        - 'float32-timing-cpu' 
+        # - 'float32-timing-cpu' 
         - 'f32-srp-timing-cpu'
         - 'f32-rds-timing-cpu'
 
@@ -472,7 +472,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2], #16],
+            'workers': [16], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [240],
@@ -497,7 +497,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2], #16],
+            'workers': [16], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [240],
@@ -524,7 +524,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2], #16],
+            'workers': [16], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [240],
@@ -551,7 +551,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2], #16],
+            'workers': [16], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [240],
@@ -578,7 +578,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2], #16],
+            'workers': [16], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [240],
@@ -604,7 +604,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2], #16],
+            'workers': [16], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [240],
