--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -429,9 +429,9 @@ slurm:
 
         # - 'srp-timing-cpu' # Done 
         # - 'rds-timing-cpu' # In progress
-        # - 'exact-timing-cpu' # In progress
+        - 'exact-timing-cpu' # In progress
         # - 'float32-timing-cpu'
-        - 'f32-srp-timing-cpu' 
+        # - 'f32-srp-timing-cpu' 
         # - 'f32-rds-timing-cpu' 
 
         # - f32-rds-monitor
@@ -560,7 +560,8 @@ slurm:
 
         'exact-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [1500000],
+            # 'particles': [1500000],
+            'particles': [3000000],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -576,10 +577,13 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32],
-            'omp': [10],
+            'workers': [64],
+            'omp': [32],
+
             'mpi': ['mvapich2'],
             'time': [120],
+            'cores_per_cpu': [64],
+            'partition': ['cloud'],
             'repeats': 3
         },
 
