--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -427,12 +427,12 @@ slurm:
         # - 'f32-srp-weak-scaling-timing-gpu'
         # - 'f32-rds-weak-scaling-timing-gpu' 
 
-        # - 'srp-timing-cpu' # Done 
-        # - 'rds-timing-cpu' # In progress
+        - 'srp-timing-cpu' # Done 
+        - 'rds-timing-cpu' # In progress
         - 'exact-timing-cpu' # In progress
-        # - 'float32-timing-cpu'
-        # - 'f32-srp-timing-cpu' 
-        # - 'f32-rds-timing-cpu' 
+        - 'float32-timing-cpu'
+        - 'f32-srp-timing-cpu' 
+        - 'f32-rds-timing-cpu' 
 
         # - f32-rds-monitor
         # - f32-srp-monitor
@@ -455,7 +455,7 @@ slurm:
         'f32-srp-timing-cpu': {
             'exe': ['LHC_main.py'],
             # 'particles': [3000000],
-            'particles': [1500000],
+            'particles': [1875000],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -472,9 +472,12 @@ slurm:
             'timing': ['timing'],
             'gpu': [0],
             # 'workers': [64],
-            'workers': [32],
+            'workers': [40],
             'omp': [10],            
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
@@ -482,7 +485,7 @@ slurm:
         'f32-rds-timing-cpu': {
             'exe': ['LHC_main.py'],
             # 'particles': [3000000],
-            'particles': [1500000],
+            'particles': [1875000],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -499,17 +502,20 @@ slurm:
             'timing': ['timing'],
             'gpu': [0],
             # 'workers': [64],
-            'workers': [32],
+            'workers': [40],
             'omp': [10],
 
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
 
         'srp-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [1500000],
+            'particles': [1875000],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -525,17 +531,20 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32],
+            'workers': [40],
             'omp': [10],
 
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
 
         'rds-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [1500000],
+            'particles': [1875000],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -551,17 +560,20 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32],
+            'workers': [40],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
 
         'exact-timing-cpu': {
             'exe': ['LHC_main.py'],
-            # 'particles': [1500000],
-            'particles': [3000000],
+            'particles': [1875000],
+            # 'particles': [3000000],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -577,19 +589,22 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [64],
-            'omp': [32],
+            'workers': [40],
+            'omp': [10],
 
             'mpi': ['mvapich2'],
             'time': [120],
-            'cores_per_cpu': [64],
-            'partition': ['cloud'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
+            # 'cores_per_cpu': [64],
+            # 'partition': ['cloud'],
             'repeats': 3
         },
 
         'float32-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [1500000],
+            'particles': [1875000],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -605,9 +620,11 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32],
+            'workers': [40],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
             'time': [120],
             'repeats': 3
         },
