prepares scan configs

--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -444,10 +444,10 @@ slurm:
         # - 'f32-rds-timing-gpu' # DONE
 
         # Approximate CPU
-        # - 'srp-timing-cpu' #DONE
-        # - 'rds-timing-cpu'  #DONE
+        - 'srp-timing-cpu' #DONE
+        - 'rds-timing-cpu'  #DONE
         - 'exact-timing-cpu' # DONE
-        # - 'float32-timing-cpu'  #DONE
+        - 'float32-timing-cpu'  #DONE
         - 'f32-srp-timing-cpu' 
         - 'f32-rds-timing-cpu' 
 
@@ -460,7 +460,7 @@ slurm:
         'f32-srp-timing-cpu': {
             'exe': ['PS_main.py'],
             # 'particles': [32000000],
-            'particles': [16000000],
+            'particles': [20000000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -476,9 +476,12 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #, 16],
+            'workers': [40], #, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
@@ -486,7 +489,7 @@ slurm:
 
         'f32-rds-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [16000000], #, 400000],
+            'particles': [20000000], #, 400000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -502,9 +505,12 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #, 16],
+            'workers': [40], #, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
@@ -512,7 +518,7 @@ slurm:
 
         'srp-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [16000000],
+            'particles': [20000000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -528,9 +534,12 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #, 16],
+            'workers': [40], #, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
@@ -538,7 +547,7 @@ slurm:
 
         'rds-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [16000000], #, 400000],
+            'particles': [20000000], #, 400000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -554,16 +563,19 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #, 16],
+            'workers': [40], #, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
 
         'exact-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [16000000], #, 400000],
+            'particles': [20000000], #, 400000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -579,9 +591,12 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #, 16],
+            'workers': [40], #, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
@@ -589,7 +604,7 @@ slurm:
 
         'float32-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [16000000],
+            'particles': [20000000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -605,9 +620,12 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #, 16],
+            'workers': [40], #, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
+            'cores_per_cpu': [20],
+            'partition': ['inf-short'],
+
             'time': [120],
             'repeats': 3
         },
