--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -15,7 +15,8 @@ cloud:
         'f32-srp-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            # 'bunches': [12],
+            'bunches': [24],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -30,7 +31,7 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [4],
             'omp': [32],            
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
@@ -42,7 +43,7 @@ cloud:
         'f32-rds-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [24],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -57,7 +58,7 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [4],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
@@ -69,7 +70,7 @@ cloud:
         'srp-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [24],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -84,7 +85,7 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [4],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
@@ -96,7 +97,7 @@ cloud:
         'rds-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [24],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -111,7 +112,7 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [4],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
@@ -123,7 +124,7 @@ cloud:
         'exact-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [24],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -138,7 +139,7 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [4],
             'omp': [32],
             'mpi': ['mvapich2'],
             'time': [120],
@@ -150,7 +151,7 @@ cloud:
         'float32-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [24],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -165,7 +166,7 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [4],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
